@@ -1,6 +1,10 @@
 Changelog for GEMC
 ==================
 
+4/18/19
+
+ - added mirror hit process routine as standalone routine and bank
+
 3/26/19
 
  - added FILTER_HITS options: when set to 1, do not write events if there are not hits.
